tests/dataset/job/compiler/c/q10.error
/tmp/TestCCompiler_JOB_Goldenq103043615073/001/prog.c: In function ‘test_Q10_finds_uncredited_voice_actor_in_Russian_movie’:
/tmp/TestCCompiler_JOB_Goldenq103043615073/001/prog.c:313:11: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  313 |       tmp1.len) {
      |           ^
      |           ->
/tmp/TestCCompiler_JOB_Goldenq103043615073/001/prog.c:320:32: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  320 |               .data[i3] != tmp1.data[i3]) {
      |                                ^
      |                                ->
/tmp/TestCCompiler_JOB_Goldenq103043615073/001/prog.c: In function ‘main’:
/tmp/TestCCompiler_JOB_Goldenq103043615073/001/prog.c:366:30: warning: implicit declaration of function ‘matches_item_list_t_create’ [-Wimplicit-function-declaration]
  366 |   matches_item_list_t tmp4 = matches_item_list_t_create(
      |                              ^~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/TestCCompiler_JOB_Goldenq103043615073/001/prog.c:367:16: error: ‘(char_name_t *)&char_name’ is a pointer; did you mean to use ‘->’?
  367 |       char_name.len * cast_info.len * role_type.len * title.len *
      |                ^
      |                ->
/tmp/TestCCompiler_JOB_Goldenq103043615073/001/prog.c:367:32: error: ‘(cast_info_t *)&cast_info’ is a pointer; did you mean to use ‘->’?
  367 |       char_name.len * cast_info.len * role_type.len * title.len *
      |                                ^
      |                                ->
/tmp/TestCCompiler_JOB_Goldenq103043615073/001/prog.c:367:48: error: ‘(role_type_t *)&role_type’ is a pointer; did you mean to use ‘->’?
  367 |       char_name.len * cast_info.len * role_type.len * title.len *
      |                                                ^
      |                                                ->
/tmp/TestCCompiler_JOB_Goldenq103043615073/001/prog.c:367:60: error: ‘(title_t *)&title’ is a pointer; did you mean to use ‘->’?
  367 |       char_name.len * cast_info.len * role_type.len * title.len *
      |                                                            ^
      |                                                            ->
/tmp/TestCCompiler_JOB_Goldenq103043615073/001/prog.c:368:22: error: ‘(movie_companie_t *)&movie_companies’ is a pointer; did you mean to use ‘->’?
  368 |       movie_companies.len * company_name.len * company_type.len);
      |                      ^
      |                      ->
/tmp/TestCCompiler_JOB_Goldenq103043615073/001/prog.c:368:41: error: ‘(company_name_t *)&company_name’ is a pointer; did you mean to use ‘->’?
  368 |       movie_companies.len * company_name.len * company_type.len);
      |                                         ^
      |                                         ->
/tmp/TestCCompiler_JOB_Goldenq103043615073/001/prog.c:368:60: error: ‘(company_type_t *)&company_type’ is a pointer; did you mean to use ‘->’?
  368 |       movie_companies.len * company_name.len * company_type.len);
      |                                                            ^
      |                                                            ->
/tmp/TestCCompiler_JOB_Goldenq103043615073/001/prog.c:402:41: warning: passing argument 1 of ‘contains_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  402 |                 if (!(contains_string(ci.note, "(voice)") &&
      |                                       ~~^~~~~
/tmp/TestCCompiler_JOB_Goldenq103043615073/001/prog.c:71:34: note: expected ‘char *’ but argument is of type ‘const char *’
   71 | static int contains_string(char *s, char *sub) {
      |                            ~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq103043615073/001/prog.c:403:41: warning: passing argument 1 of ‘contains_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  403 |                       contains_string(ci.note, "(uncredited)") &&
      |                                       ~~^~~~~
/tmp/TestCCompiler_JOB_Goldenq103043615073/001/prog.c:71:34: note: expected ‘char *’ but argument is of type ‘const char *’
   71 | static int contains_string(char *s, char *sub) {
      |                            ~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq103043615073/001/prog.c:420:15: warning: implicit declaration of function ‘int_create’; did you mean ‘list_int_create’? [-Wimplicit-function-declaration]
  420 |   int tmp13 = int_create(matches.len);
      |               ^~~~~~~~~~
      |               list_int_create
/tmp/TestCCompiler_JOB_Goldenq103043615073/001/prog.c:424:10: error: request for member ‘data’ in something not a structure or union
  424 |     tmp13.data[tmp14] = x.character;
      |          ^
/tmp/TestCCompiler_JOB_Goldenq103043615073/001/prog.c:427:8: error: request for member ‘len’ in something not a structure or union
  427 |   tmp13.len = tmp14;
      |        ^
/tmp/TestCCompiler_JOB_Goldenq103043615073/001/prog.c:432:10: error: request for member ‘data’ in something not a structure or union
  432 |     tmp16.data[tmp17] = x.movie;
      |          ^
/tmp/TestCCompiler_JOB_Goldenq103043615073/001/prog.c:435:8: error: request for member ‘len’ in something not a structure or union
  435 |   tmp16.len = tmp17;
      |        ^
/tmp/TestCCompiler_JOB_Goldenq103043615073/001/prog.c:437:61: error: incompatible type for argument 1 of ‘_min_string’
  437 |       (result_t){.uncredited_voiced_character = _min_string(tmp13),
      |                                                             ^~~~~
      |                                                             |
      |                                                             int
/tmp/TestCCompiler_JOB_Goldenq103043615073/001/prog.c:62:38: note: expected ‘list_string’ but argument is of type ‘int’
   62 | static char *_min_string(list_string v) {
      |                          ~~~~~~~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq103043615073/001/prog.c:438:47: error: incompatible type for argument 1 of ‘_min_string’
  438 |                  .russian_movie = _min_string(tmp16)}};
      |                                               ^~~~~
      |                                               |
      |                                               int
/tmp/TestCCompiler_JOB_Goldenq103043615073/001/prog.c:62:38: note: expected ‘list_string’ but argument is of type ‘int’
   62 | static char *_min_string(list_string v) {
      |                          ~~~~~~~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq103043615073/001/prog.c:448:20: warning: passing argument 1 of ‘_json_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  448 |     _json_string(it.uncredited_voiced_character);
      |                  ~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/TestCCompiler_JOB_Goldenq103043615073/001/prog.c:76:32: note: expected ‘char *’ but argument is of type ‘const char *’
   76 | static void _json_string(char *s) { printf("\"%s\"", s); }
      |                          ~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq103043615073/001/prog.c:452:20: warning: passing argument 1 of ‘_json_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  452 |     _json_string(it.russian_movie);
      |                  ~~^~~~~~~~~~~~~~
/tmp/TestCCompiler_JOB_Goldenq103043615073/001/prog.c:76:32: note: expected ‘char *’ but argument is of type ‘const char *’
   76 | static void _json_string(char *s) { printf("\"%s\"", s); }
      |                          ~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq103043615073/001/prog.c:456:67: error: incompatible types when assigning to type ‘list_int’ from type ‘result_t *’
  456 |   test_Q10_finds_uncredited_voice_actor_in_Russian_movie_result = result;
      |                                                                   ^~~~~~
/tmp/TestCCompiler_JOB_Goldenq103043615073/001/prog.c:458:13: error: request for member ‘data’ in something not a structure or union
  458 |   free(tmp13.data);
      |             ^
/tmp/TestCCompiler_JOB_Goldenq103043615073/001/prog.c:459:13: error: request for member ‘data’ in something not a structure or union
  459 |   free(tmp16.data);
      |             ^
